# moon-rover

./: .dockerignore  .env_example.txt  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  logging.py  main.py
app/application/: auth_service.py  command_service.py  health_service.py  position_service.py
app/domain/: entities.py  exceptions.py  services.py
app/infrastructure/db/: config.py  engine.py  models.py
app/infrastructure/repositories/: auth_provider.py  repo_command.py  repo_health.py  repo_obstacle.py  repo_position.py  unit_of_work.py
app/presentation/: dependencies.py  routes.py  schemas.py
config/: obstacles.json
migrations/: env.py
migrations/versions/: 1cecc2d16dce_initial_migration.py
tests/: conftest.py
tests/application/: test_auth_service.py  test_position_service.py
tests/domain/: test_integration.py  test_services.py
tests/infrastructure/: test_command_repository.py  test_position_repository.py  test_start_position_settings.py
tests/integration/: conftest.py  test_integration_api.py
tests/unit/application/: test_command_service.py  test_health_service.py
tests/unit/domain/: test_models.py
tests/unit/infrastructure/: test_obstacle_repository.py
