[project]
name = "moon-rover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "fastapi-cli>=0.0.11",
    "fastapi-structlog>=0.7.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pytest-env>=1.1.5",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "testcontainers>=4.13.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    
    "W",     
    "F",     
    "I",     
    "B",     
    "C4",    
    "UP",    
]
ignore = [
    "E501",  
    "B008",
    "RUF003",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

markers = [
    "asyncio: mark test to run with asyncio",
    "integration: marks tests as integration"
]

filterwarnings =  [
    'ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers\..*'
]
    

